Docs: update README and AI usage documentation

--- a/Cloudwalk Case.ipynb
+++ b/Cloudwalk Case.ipynb
@@ -941,7 +941,7 @@
     "\n",
     "This solution improves user experience by offering an intuitive and dynamic interface for graph exploration and discovery.\n",
     "\n",
-    "🔗 **Try the app here:** [Dark Souls Knowledge Graph Explorer](https://your-streamlit-cloud-link)\n"
+    "🔗 **Try the app here:** [Dark Souls Knowledge Graph Explorer](https://dark-souls.streamlit.app/)\n"
    ]
   },
   {
