Update: restructure notebook sections and table of contents

--- a/Cloudwalk Case.ipynb
+++ b/Cloudwalk Case.ipynb
@@ -23,10 +23,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "613f1363",
+   "metadata": {},
+   "source": [
+    "## 📚 Table of Contents\n",
+    "\n",
+    "- [1. Data Preparation](#1-data-preparation)\n",
+    "  - [1.1 Setup and Imports](#11-setup-and-imports)\n",
+    "  - [1.2 Loading the Original JSON Dataset](#12-loading-the-original-json-dataset)\n",
+    "  - [1.3 Selecting Lore-Rich Categories](#13-selecting-lore-rich-categories)\n",
+    "  - [1.4 Extracting and Structuring Text Entries](#14-extracting-and-structuring-text-entries)\n",
+    "  - [1.5 Saving the Cleaned Dataset](#15-saving-the-cleaned-dataset)\n",
+    "  - [1.6 Inspecting the Cleaned Dataset](#16-inspecting-the-cleaned-dataset)\n",
+    "  - [1.7 Token Estimation and Sampling Strategy](#17-token-estimation-and-sampling-strategy)\n",
+    "  - [1.8 Sampling Entries for Triple Extraction](#18-sampling-entries-for-triple-extraction)\n",
+    "\n",
+    "- [2. Triple Extraction and Graph Construction](#2-triple-extraction-and-graph-construction)\n",
+    "  - [2.1 Extracting Triples Using GPT-4o](#21-extracting-triples-using-gpt-4o)\n",
+    "  - [2.2 Inspecting Extracted Triples](#22-inspecting-extracted-triples)\n",
+    "  - [2.3 Parsing and Cleaning Extracted Triples](#23-parsing-and-cleaning-extracted-triples)\n",
+    "  - [2.4 Building the Knowledge Graph in NetworkX](#24-building-the-knowledge-graph-in-networkx)\n",
+    "  - [2.5 Exporting the Graph to CSV](#25-exporting-the-graph-to-csv)\n",
+    "  - [2.6 Loading the Graph into Neo4j AuraDB with Python](#26-loading-the-graph-into-neo4j-auradb-with-python)\n",
+    "\n",
+    "- [3. Deployment and Exploration](#3-deployment-and-exploration)\n",
+    "  - [3.1 Building an Interactive Graph App with Streamlit](#31-building-an-interactive-graph-app-with-streamlit)\n",
+    "  - [3.2 Exploratory Analysis of the Graph](#32-exploratory-analysis-of-the-graph)\n",
+    "  - [3.3 Question-Answering over the Graph](#33-question-answering-over-the-graph)\n",
+    "  - [3.4 Natural Language QA Interface](#34-natural-language-qa-interface)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b8b0ef2",
+   "metadata": {},
+   "source": [
+    "## 1. Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c550e55",
    "metadata": {},
    "source": [
-    "## 1. Setup and Imports"
+    "### 1.1 Setup and Imports"
    ]
   },
   {
@@ -56,7 +96,7 @@
    "id": "5c9fa596",
    "metadata": {},
    "source": [
-    "## 2. Loading the Original JSON Dataset\n",
+    "### 1.2 Loading the Original JSON Dataset\n",
     "\n",
     "The full dataset is provided as a JSON file (`ds3.json`) containing raw textual content extracted directly from the game files of *Dark Souls III*, including item descriptions, spell texts, equipment lore, and NPC dialogues.\n",
     "\n",
@@ -83,7 +123,7 @@
    "id": "bbee0c3f",
    "metadata": {},
    "source": [
-    "## 3. Selecting Lore-Rich Categories\n",
+    "### 1.3 Selecting Lore-Rich Categories\n",
     "\n",
     "To ensure the graph captures meaningful narrative relationships, I restrict the scope to the following categories:\n",
     "\n",
@@ -110,7 +150,7 @@
    "id": "5752618e",
    "metadata": {},
    "source": [
-    "## 4. Extracting and Structuring Text Entries\n",
+    "### 1.4 Extracting and Structuring Text Entries\n",
     "\n",
     "For each entry in the selected categories, I extract the `name`, `description`, and `knowledge` fields when available. These components contain the textual content that later serves as input for relationship extraction."
    ]
@@ -143,7 +183,7 @@
    "id": "76556a0a",
    "metadata": {},
    "source": [
-    "## 5. Saving the Cleaned Dataset\n",
+    "### 1.5 Saving the Cleaned Dataset\n",
     "\n",
     "To streamline development and avoid reprocessing the full JSON file each time, I save the filtered and structured entries as `ds3_clean_texts.json`.\n"
    ]
@@ -174,7 +214,7 @@
    "id": "645250e6",
    "metadata": {},
    "source": [
-    "## 6. Inspecting the Cleaned Dataset\n",
+    "### 1.6 Inspecting the Cleaned Dataset\n",
     "\n",
     "I load the cleaned dataset and display a few samples to verify encoding, formatting, and overall relevance before proceeding to language model extraction.\n"
    ]
@@ -227,7 +267,7 @@
    "id": "ec3d3231",
    "metadata": {},
    "source": [
-    "## 7. Token Estimation and Sampling Strategy\n",
+    "### 1.7 Token Estimation and Sampling Strategy\n",
     "\n",
     "Before running large-scale extraction with GPT-4o, I estimate the token usage to control costs and processing time. The full dataset contains approximately 268,000 tokens. Based on GPT-4o pricing — $0.005 per 1,000 input tokens and $0.015 per 1,000 output tokens — the total cost would be around $2.\n",
     "\n",
@@ -269,7 +309,7 @@
    "id": "0948e6af",
    "metadata": {},
    "source": [
-    "## 8. Sampling Entries for Triple Extraction\n",
+    "### 1.8 Sampling Entries for Triple Extraction\n",
     "\n",
     "I randomly sample 100 entries from the cleaned dataset, ensuring a variety of item types (e.g., weapons, armor, spells, NPC dialogue) are included.\n",
     "\n",
@@ -296,10 +336,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86691f52",
+   "metadata": {},
+   "source": [
+    "## 2 Triple Extraction and Graph Construction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "839f5dcc",
    "metadata": {},
    "source": [
-    "### 9. Extracting Triples Using GPT-4o\n",
+    "### 2.1 Extracting Triples Using GPT-4o\n",
     "\n",
     "To transform the item descriptions into structured knowledge, I use **GPT-4o** via the OpenAI API.\n",
     "\n",
@@ -447,7 +495,7 @@
    "id": "fd8b97c8",
    "metadata": {},
    "source": [
-    "### 10. Inspecting Extracted Triples\n",
+    "### 2.2 Inspecting Extracted Triples\n",
     "\n",
     "Before proceeding to graph construction, I inspect a random sample of the extracted triples to verify their **quality and consistency**.\n",
     "\n",
@@ -623,7 +671,7 @@
    "id": "aa3d9814",
    "metadata": {},
    "source": [
-    "### 11. Parsing and Cleaning Extracted Triples\n",
+    "### 2.3 Parsing and Cleaning Extracted Triples\n",
     "\n",
     "Before constructing the knowledge graph, I parse the extracted triples and apply light cleaning to improve **entity consistency**.\n",
     "\n",
@@ -720,7 +768,7 @@
    "id": "2cf913a3",
    "metadata": {},
    "source": [
-    "### 12. Building the Knowledge Graph in NetworkX\n",
+    "### 2.4 Building the Knowledge Graph in NetworkX\n",
     "\n",
     "I start constructing the knowledge graph using **NetworkX**, a Python library for graph analysis.\n",
     "\n",
@@ -783,7 +831,7 @@
    "id": "f1a0c8b6",
    "metadata": {},
    "source": [
-    "### 13. Exporting the Graph to CSV\n",
+    "### 2.5 Exporting the Graph to CSV\n",
     "\n",
     "To document the graph structure and maintain a clear, reproducible dataset, I export the graph to two CSV files:\n",
     "\n",
@@ -837,7 +885,7 @@
    "id": "09c5e2c9",
    "metadata": {},
    "source": [
-    "### 14. Loading the Graph into Neo4j AuraDB with Python\n",
+    "### 2.6 Loading the Graph into Neo4j AuraDB with Python\n",
     "\n",
     "In this step, I connect to Neo4j AuraDB and upload the graph directly from the `nodes.csv` and `edges.csv` files.\n",
     "\n",
@@ -930,10 +978,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1bb2e534",
+   "metadata": {},
+   "source": [
+    "## 3 Exploration and Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5784cffe",
    "metadata": {},
    "source": [
-    "### 15. Building an Interactive Graph App with Streamlit\n",
+    "### 3.1 Building an Interactive Graph App with Streamlit\n",
     "\n",
     "To explore the knowledge graph interactively, I created a web application using Streamlit.\n",
     "\n",
@@ -946,8 +1002,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b6bafa9",
+   "id": "190f495b",
    "metadata": {},
+   "source": [
+    "### 3.2 Exploratory Analysis of the Graph\n",
+    "\n",
+    "In this section, I analyze the structure of the knowledge graph using the nodes.csv and edges.csv files. This step reveals key insights into the entities and relationships extracted from Dark Souls lore and helps inform the question-answering stage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d788af48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6035da3",
+   "metadata": {},
+   "source": [
+    "### 3.3 Question-Answering over the Graph  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "441f3b31",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "992608b2",
+   "metadata": {},
+   "source": [
+    "### 3.4 Natural Language QA Interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4baf4381",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
