Submittig final files

--- a/Cloudwalk Case.ipynb
+++ b/Cloudwalk Case.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "d807ff51",
    "metadata": {},
    "outputs": [],
@@ -97,12 +97,6 @@
     "username = os.getenv(\"NEO4J_USERNAME\")\n",
     "password = os.getenv(\"NEO4J_PASSWORD\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fbc40165",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -921,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "efc661c2",
    "metadata": {},
    "outputs": [
@@ -938,11 +932,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from neo4j import GraphDatabase\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
     "# ✅ Load environment variables\n",
     "load_dotenv()\n",
     "uri = os.getenv(\"NEO4J_URI\")\n",
@@ -1683,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "e2b09ba4",
    "metadata": {},
    "outputs": [],
@@ -2319,20 +2308,38 @@
    "source": [
     "### 3.4 Natural Language QA Interface\n",
     "\n",
-    "To enhance accessibility and allow intuitive interaction with the knowledge graph, I implemented a natural-language question-answering (QA) layer using OpenAI's GPT model.\n",
+    "To make the Dark Souls knowledge graph more accessible and engaging, I developed an interactive **natural-language question-answering (QA) interface** using Streamlit and OpenAI's GPT-4 model. This interface allows users to query the Neo4j graph using plain English, without needing to know Cypher or understand the graph’s internal schema.\n",
     "\n",
-    "This layer translates user-typed questions into Cypher queries, which are executed on the Neo4j database in real time. The resulting answers are then returned to the user within the Streamlit app.\n",
+    "The system not only translates user questions into valid Cypher queries, but also executes those queries on the graph database and presents the results in multiple formats: **structured tables, dynamic graph visualizations**, and a **textual interpretation** of the answer.\n",
     "\n",
-    "This interface lowers the barrier to exploring complex graph data and allows users—whether familiar with Cypher or not—to query the Dark Souls knowledge graph using everyday English.\n",
+    "---\n",
     "\n",
-    "**How it works:**\n",
+    "**Key features of the QA interface:**\n",
     "\n",
-    "1. **Input box:** The user types a natural-language question in the Streamlit app.  \n",
-    "2. **Query generation:** The GPT model interprets the question and produces a Cypher query.  \n",
-    "3. **Query execution:** The Cypher query is sent to the Neo4j graph database.  \n",
-    "4. **Response display:** Results are shown directly in the app.\n",
+    "- 🔍 **Natural-language input**: Users can freely type their questions or select from predefined suggestions.  \n",
+    "- ⚙️ **LLM-to-Cypher translation**: GPT-4 translates the user's question into a Cypher query, constrained to only valid relationship types extracted from the graph.  \n",
+    "- 📊 **Answer display**: The query result is shown as a clean and readable table within the app.  \n",
+    "- 🌐 **Subgraph visualization**: If the result contains graph-like structure (`source`, `relation`, `target`), a dynamic PyVis network graph is generated on the fly.  \n",
+    "- 🧠 **Interpretation engine**: A concise summary of the results is generated using GPT-4, offering users a narrative explanation of what the data reveals.  \n",
+    "- 🧹 **Clear & reset**: The interface includes buttons to run or clear a question, preserving session state for a seamless experience.  \n",
     "\n",
-    "This implementation is a proof of concept, showing how LLMs can bridge the gap between unstructured natural language and structured graph querying.\n"
+    "---\n",
+    "\n",
+    "**User flow in the app:**\n",
+    "\n",
+    "1. The user either types a question or picks one from a dropdown menu.  \n",
+    "2. Upon clicking **Run**, GPT-4 generates a Cypher query tailored to the graph’s structure.  \n",
+    "3. The query is executed in real time on the Neo4j database.  \n",
+    "4. The app displays:\n",
+    "   - the generated Cypher query,  \n",
+    "   - a tabular result,  \n",
+    "   - a dynamic graph (if applicable),  \n",
+    "   - and an interpretation of the answer.  \n",
+    "5. The user can clear the input at any time and start again.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "This interface demonstrates how **LLMs can bridge the gap between unstructured natural language and structured graph data**, making the exploration of complex knowledge graphs more natural, visual, and insightful—even for users with no technical background.\n"
    ]
   },
   {
@@ -2351,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "75ef19bd",
    "metadata": {},
    "outputs": [
@@ -2493,6 +2500,14 @@
     "\n",
     "print(\"✅ Saved to relationship_types.py\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c0162f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
